chore(docs): add checkout documentation and move out router logic into its file
