# internal/actions/order/routes.go
@@ -1,0 +1,12 @@
+package order
+
+import "github.com/gin-gonic/gin"
+
+type OrderService struct{}
+
+func (o *OrderService) RegisterRoutes(r *gin.Engine) {
+	orderGroup := r.Group("/customers/:customerUUID/orders")
+
+	orderGroup.GET("/", customerOrderIndex)
+	orderGroup.GET("/:orderUUID", customerOrderDetails)
+}
